feat: add the final point to obtain the levels by area
